attached_assets/Pasted-postgres-q-PS-C-Users-yashw-AI-Wardrobe-App-AI-Wardrobe-App-npm-run-db-push-The-term-nod-1746856799237.txt
postgres=# \q
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm run db:push
& : The term 'node.exe' is not recognized as the name of a cmdlet, function, script file, or operable program. Check the 
spelling of the name, or if a path was included, verify that the path is correct and try again.
At C:\Users\yashw\AppData\Roaming\npm\npm.ps1:24 char:7
+     & "node$exe"  "$basedir/node_modules/npm/bin/npm-cli.js" $args
+       ~~~~~~~~~~
    + CategoryInfo          : ObjectNotFound: (node.exe:String) [], CommandNotFoundException
    + FullyQualifiedErrorId : CommandNotFoundException

PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm run db:push
>>
& : The term 'node.exe' is not recognized as the name of a cmdlet, function, script file, or operable program. Check the 
spelling of the name, or if a path was included, verify that the path is correct and try again.
At C:\Users\yashw\AppData\Roaming\npm\npm.ps1:24 char:7
+     & "node$exe"  "$basedir/node_modules/npm/bin/npm-cli.js" $args
+       ~~~~~~~~~~
    + CategoryInfo          : ObjectNotFound: (node.exe:String) [], CommandNotFoundException
    + FullyQualifiedErrorId : CommandNotFoundException

PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> 
 *  History restored 

PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm run db:push
>>

> rest-express@1.0.0 db:push
> drizzle-kit push

No config path provided, using default 'drizzle.config.ts'
Reading config file 'C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\drizzle.config.ts'
Using 'pg' driver for database querying
[⣷] Pulling schema from database...
TypeError: Invalid URL
    at new URL (node:internal/url:818:25)
    at parse (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg-connection-string\index.js:29:14)
    at new ConnectionParameters (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg\lib\connection-parameters.js:56:42)
    at new Client (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg\lib\client.js:18:33)
    at BoundPool.newClient (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg-pool\index.js:222:20)
    at BoundPool.connect (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg-pool\index.js:216:10)
    at BoundPool.query (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\pg-pool\index.js:403:10)
    at Object.query (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\drizzle-kit\bin.cjs:78355:39)
    at fromDatabase2 (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\drizzle-kit\bin.cjs:19095:34)
    at pgPushIntrospect (C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\node_modules\drizzle-kit\bin.cjs:81201:9) {
  code: 'ERR_INVALID_URL',
  input: 'postgres://<username>:<password>@<hostname>:<port>/<database>',
  base: 'postgres://base'
}
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> node scripts/test-env.js
file:///C:/Users/yashw/AI-Wardrobe-App/AI-Wardrobe-App/scripts/test-env.js:14
import { Pool } from 'pg';
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'pg';
const { Pool } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm install

up to date, audited 666 packages in 5s

72 packages are looking for funding
  run `npm fund` for details

10 vulnerabilities (8 moderate, 2 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> npm run dev

> rest-express@1.0.0 dev
> tsx server/index.ts

C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App\server\routes.ts:16
  analyzeStyle
  ^

SyntaxError: The requested module './services/ai-service' does not provide an export named 'analyzeStyle'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:578:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.14.0
PS C:\Users\yashw\AI-Wardrobe-App\AI-Wardrobe-App> 